<resources>
    <string name="app_name">Book Store</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!--Genre-->
    <string name="literary_fiction">Literary fiction</string>
    <string name="psychological_fiction">Psychological Fiction</string>
    <string name="biography">Biography</string>

    <string name="catalog">Catalog</string>
    <string name="search_for_title_or_author">Search for title or author</string>
    <string name="search_icon">Search Icon</string>
    <string name="genres">Genres</string>
    <string name="genre_icon">Genre Icon</string>
    <string name="home">Home</string>

    <string name="my_library">My Library</string>
    <string name="book_store">Book Store</string>
    <string name="search_for_books">Search for books</string>
    <string name="most_popular">Most popular</string>
    <string name="see_all">See all</string>
    <string name="most_popular_book_cover">Most popular book cover</string>
    <string name="background_image_in_home">Background image in Home</string>
    <string name="newest_and_trending"><![CDATA[Newest & Trending]]></string>
    <string name="newest_and_trending_book_cover">Newest and Trending Book Cover</string>

    <!--Dummy Values-->
    <string name="christy_lefteri">Christy Lefteri</string>
    <string name="the_beekeeper_of_aleppo">The Beekeeper of Aleppo</string>
    <string name="normal_people">Normal People</string>
    <string name="sally_rooney">Sally Rooney</string>
    <string name="becoming">Becoming</string>
    <string name="michelle_obama">Michelle Obama</string>
    <string name="dollar_14_69">$14.69</string>
    <string name="a_fire_sparkling">A Fire Sparkling</string>
    <string name="the_man_with_no_borders">The Man with no borders</string>
    <string name="relative_fortunes">Relative Fortunes</string>
    <string name="the_silent_ones">The Silent Ones</string>
    <string name="coming_soon">Coming soon</string>
    <string name="super_attractor">Super Attractor</string>
    <string name="how_to">How to</string>
    <string name="a_better_man">A Better Man</string>
    <string name="permanent_recors">Permanent Recors</string>
    <string name="more">More</string>
    <string name="see_all_articles">See All Articles</string>
    <string name="weekly_free_books">Weekly free books</string>
    <string name="image_of_article">Image of article</string>
    <string name="top_romantic_novels">Top romantic novels</string>
    <string name="now_reading">Now reading</string>
    <string name="vladimir_nabokov">Vladimir Nabokov</string>
    <string name="lolita">Lolita</string>
    <string name="milkman">Milkman</string>
    <string name="anna_burns">Anna Burns</string>
    <string name="novel">Novel</string>
    <string name="seventy_five_percent">75%</string>
    <string name="play_dead">Play Dead</string>
    <string name="the_handmaids_tale">The Handmaid\'s Tale</string>
    <string name="the_bridal_party">The Bridal Party</string>
    <string name="the_aftermath">The Aftermath</string>
    <string name="books_to_read">Books to read</string>
    <string name="finished">Finished</string>
    <string name="i_looked_away">I Looked Away</string>
    <string name="this_is_going_to_hurt">This is going to hurt</string>
    <string name="the_reckoning">The Reckoning</string>
    <string name="after">After</string>
    <string name="wishlist">Wishlist</string>
    <string name="you_have_no_books_on_your_wishlist">You have no books on your wishlist.</string>
    <string name="back_button">Back button</string>
    <string name="search">Search</string>
    <string name="lisa_cohen">Lisa Cohen</string>
    <string name="all_we_know_three_lives">All We Know: Three Lives</string>
    <string name="hidden_figures">Hidden Figures</string>
    <string name="margot_lee_shetterly">Margot Lee Shetterly</string>
    <string name="the_wives_of_henry_viii">The Wives of Henry VIII</string>
    <string name="lady_antonia_fraser">Lady Antonia Fraser</string>
    <string name="frida">Frida</string>
    <string name="hayden_herrera">Hayden Herrera</string>
    <string name="stephen_l_carter">Stephen L. Carter</string>
    <string name="invisible">Invisible</string>
    <string name="wild_swans">Wild Swans</string>
    <string name="jung_chang">Jung Chang</string>
    <string name="background_color_of_shown_image">Background color of shown image</string>

</resources>