<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/catalogFragment"
        android:name="com.example.bookstore.ui.catalog.CatalogFragment"
        android:label="@string/catalog"
        tools:layout="@layout/fragment_catalog">
        <action
            android:id="@+id/action_catalogFragment_to_specificGenreBooksFragment"
            app:destination="@id/specificGenreBooksFragment" />
    </fragment>

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.bookstore.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/myLibraryFragment"
        android:name="com.example.bookstore.ui.mylibrary.MyLibraryFragment"
        android:label="@string/my_library"
        tools:layout="@layout/fragment_my_library" />
    <fragment
        android:id="@+id/specificGenreBooksFragment"
        android:name="com.example.bookstore.ui.catalog.SpecificGenreBooksFragment"
        android:label="fragment_specific_genre_books"
        tools:layout="@layout/fragment_specific_genre_books">
        <argument
            android:name="genre"
            app:argType="string" />
    </fragment>

</navigation>