<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.mylibrary.MyLibraryFragment">

        <ImageView
            android:id="@+id/iv_background_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/background_image_in_home"
            android:scaleType="fitXY"
            android:src="@drawable/bg_my_library"
            app:layout_constraintBottom_toTopOf="@id/now_reading_mid_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title_my_library"
            style="@style/textStyleH1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="56dp"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:text="@string/my_library"
            android:textColor="@color/black"
            app:drawableEndCompat="@drawable/ic_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_now_reading_title"
            style="@style/textStyleH2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/now_reading"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_my_library" />

        <TextView
            android:id="@+id/tv_see_all_now_reading"
            style="@style/textStyleLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/see_all"
            android:textAllCaps="true"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/tv_now_reading_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_now_reading_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_now_reading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_now_reading_title"
            app:layout_constraintTop_toBottomOf="@id/tv_now_reading_title" />

        <View
            android:id="@+id/now_reading_mid_line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintBottom_toBottomOf="@id/rv_now_reading"
            app:layout_constraintEnd_toEndOf="@id/rv_now_reading"
            app:layout_constraintStart_toStartOf="@id/rv_now_reading"
            app:layout_constraintTop_toTopOf="@id/rv_now_reading" />

        <TextView
            android:id="@+id/tv_books_to_read_title"
            style="@style/textStyleH2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:text="@string/books_to_read"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_now_reading" />

        <TextView
            android:id="@+id/tv_see_all_books_to_read"
            style="@style/textStyleLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/see_all"
            android:textAllCaps="true"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/tv_books_to_read_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_books_to_read_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_books_to_read"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_books_to_read_title"
            app:layout_constraintTop_toBottomOf="@id/tv_books_to_read_title" />

        <TextView
            android:id="@+id/tv_finished_title"
            style="@style/textStyleH2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:text="@string/finished"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_books_to_read" />

        <TextView
            android:id="@+id/tv_see_all_finished"
            style="@style/textStyleLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/see_all"
            android:textAllCaps="true"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/tv_finished_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_finished_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_finished_books"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_finished_title"
            app:layout_constraintTop_toBottomOf="@id/tv_finished_title" />

        <TextView
            android:id="@+id/tv_wish_list_title"
            style="@style/textStyleH2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:text="@string/wishlist"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_finished_books" />

        <TextView
            android:id="@+id/tv_wish_list_body"
            style="@style/textStyleBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintHeight_min="24dp"
            android:gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/you_have_no_books_on_your_wishlist"
            android:textColor="@color/grey_600"
            app:layout_constraintStart_toStartOf="@id/tv_wish_list_title"
            app:layout_constraintTop_toBottomOf="@id/tv_wish_list_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
