<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_cover"
        android:layout_width="104dp"
        android:layout_height="160dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/newest_and_trending_book_cover"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/img_now_reading_1" />

    <TextView
        android:id="@+id/tv_author"
        style="@style/textStyleH3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_vertical"
        android:minHeight="24dp"
        android:textAllCaps="true"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_cover"
        app:layout_constraintTop_toTopOf="@id/iv_cover"
        app:layout_constraintWidth_min="175dp"
        tools:text="@string/vladimir_nabokov" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/textStyleH2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:gravity="center_vertical"
        android:minHeight="24dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_author"
        app:layout_constraintTop_toBottomOf="@id/tv_author"
        tools:text="@string/lolita" />

    <TextView
        android:id="@+id/tv_genre"
        style="@style/textStyleBody"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        tools:text="@string/novel" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:progress="75"
        android:progressBackgroundTint="@color/grey_300"
        android:progressTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.00"
        app:layout_constraintStart_toStartOf="@id/tv_genre"
        app:layout_constraintTop_toBottomOf="@id/tv_genre"
        app:layout_constraintWidth_max="160dp" />

    <TextView
        android:id="@+id/tv_progress"
        style="@style/textStyleBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="24dp"
        android:text="75%"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/progress_bar"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="@id/progress_bar"
        app:layout_constraintTop_toBottomOf="@id/progress_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>